// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchInput /> create SearchInput 1`] = `
<div
  className="fd-search-input blue"
>
  <div
    className="fd-popover"
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-expanded={false}
        aria-haspopup="true"
        className="fd-combobox-control"
      >
        <div
          className="fd-input-group fd-input-group--after"
        >
          <input
            className="fd-input"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            placeholder="Enter a fruit"
            style={Object {}}
            type="text"
            value=""
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button"
          >
            <button
              className=" fd-button--light sap-icon--search"
              onClick={[Function]}
            />
          </span>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="fd-popover__body fd-popover__body--no-arrow"
    >
      <div
        className=""
      >
        <nav
          className="fd-menu"
        >
          <ul
            className="fd-menu__list"
          >
            <li
              className="fd-menu__item"
              onClick={[Function]}
            >
              <strong>
                
              </strong>
              apple
            </li>
            <li
              className="fd-menu__item"
              onClick={[Function]}
            >
              <strong>
                
              </strong>
              apricot
            </li>
            <li
              className="fd-menu__item"
              onClick={[Function]}
            >
              <strong>
                
              </strong>
              banana
            </li>
            <li
              className="fd-menu__item"
              onClick={[Function]}
            >
              <strong>
                
              </strong>
              blueberry
            </li>
            <li
              className="fd-menu__item"
              onClick={[Function]}
            >
              <strong>
                
              </strong>
              blackberry
            </li>
            <li
              className="fd-menu__item"
              onClick={[Function]}
            >
              <strong>
                
              </strong>
              calabash
            </li>
            <li
              className="fd-menu__item"
              onClick={[Function]}
            >
              <strong>
                
              </strong>
              clementines
            </li>
            <li
              className="fd-menu__item"
              onClick={[Function]}
            >
              <strong>
                
              </strong>
              kiwi
            </li>
            <li
              className="fd-menu__item"
              onClick={[Function]}
            >
              <strong>
                
              </strong>
              orange
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SearchInput /> create SearchInput 2`] = `
<div
  className="fd-search-input fd-search-input--closed"
>
  <div
    className="fd-popover"
  >
    <div
      className="fd-popover__control fd-search-input__control"
    >
      <button
        aria-expanded={false}
        aria-haspopup="true"
        className="sap-icon--search fd-button--shell"
        onClick={[Function]}
      />
      <div
        aria-hidden={true}
        className="fd-search-input__closedcontrol"
      >
        <div
          aria-expanded={false}
          aria-haspopup="true"
          className="fd-search-input__controlinput"
        >
          <input
            className="fd-input"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            placeholder="Enter a fruit"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="fd-popover__body fd-popover__body--no-arrow"
    >
      <div
        className="fd-search-input__body"
      >
        <nav
          className="fd-menu"
        >
          <ul
            className="fd-menu__list"
          >
            <li
              className="fd-menu__item"
              onClick={[Function]}
            >
              <strong>
                
              </strong>
              apple
            </li>
            <li
              className="fd-menu__item"
              onClick={[Function]}
            >
              <strong>
                
              </strong>
              apricot
            </li>
            <li
              className="fd-menu__item"
              onClick={[Function]}
            >
              <strong>
                
              </strong>
              banana
            </li>
            <li
              className="fd-menu__item"
              onClick={[Function]}
            >
              <strong>
                
              </strong>
              blueberry
            </li>
            <li
              className="fd-menu__item"
              onClick={[Function]}
            >
              <strong>
                
              </strong>
              blackberry
            </li>
            <li
              className="fd-menu__item"
              onClick={[Function]}
            >
              <strong>
                
              </strong>
              calabash
            </li>
            <li
              className="fd-menu__item"
              onClick={[Function]}
            >
              <strong>
                
              </strong>
              clementines
            </li>
            <li
              className="fd-menu__item"
              onClick={[Function]}
            >
              <strong>
                
              </strong>
              kiwi
            </li>
            <li
              className="fd-menu__item"
              onClick={[Function]}
            >
              <strong>
                
              </strong>
              orange
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SearchInput /> create SearchInput 3`] = `
<div
  className="fd-search-input"
>
  <div
    className="fd-popover"
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-expanded={false}
        aria-haspopup="true"
        className="fd-combobox-control"
      >
        <div
          className="fd-input-group fd-input-group--after"
        >
          <input
            className="fd-input"
            onChange={[Function]}
            onClick={[Function]}
            onKeyPress={[Function]}
            placeholder="Enter a fruit"
            style={Object {}}
            type="text"
            value=""
          />
          <span
            className="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button"
          >
            <button
              className=" fd-button--light sap-icon--search"
              onClick={[Function]}
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
